# Lamp

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  a.out  compile_commands.json  main.cpp
.cache/clangd/index/: BinExpr.h.8D04B791B6B9C656.idx  CallExpr.h.B344FFFE23087C5C.idx  Class.h.69CADCB4A7BB5886.idx  CompoundExpr.h.7A6AB6F70E23005A.idx  CompoundStmt.h.6EBA9E2D21AE0863.idx  Expr.h.6ED97C2715AD10CD.idx  Function.h.50EC8BE2A4CBA7F4.idx  IdenExpr.h.E16E47B9676E7057.idx  IfExpr.h.F88B6F4BF50E1CE4.idx  Includes.h.AA9AF7E348B783DB.idx  Lexer.cpp.6DEFA8DB28446FDC.idx  Lexer.h.BAE238AF75081489.idx  LiteralExpr.h.80AB9D319A4CF44C.idx  Node.h.5D26EAD1EE98E688.idx  Parser.cpp.9E052CF1A1B1A529.idx  Parser.h.33BE33D347A2AF72.idx  ParserError.cpp.C6A24AD52D113D62.idx  ParserError.h.1990A2744A5449BD.idx  Program.h.9CAD51581BAF7442.idx  ReturnExpr.h.17905924F83AAD26.idx  Stmt.h.FC51FAD6CC9DFCE5.idx  Type.h.D72EF066FC3F2ABB.idx  Utility.h.DE056B02F838DE27.idx  VarDecl.h.FC42EE52C13ECCE2.idx  Visitor.h.429931F83007A4EA.idx  lexer_test.cpp.D9234BC6743DDD5C.idx  main.cpp.47B3F709E4167D50.idx  parser_test.cpp.FB51550CB84CF282.idx
docs/: grammar.md
examples/: Compound.lmp  Fact.lmp  Fibbo.lmp  Fibbo_tail.lmp  SimpleProgram.lmp
imports/: io.c
include/: .Lexer.h.swp  .Parser.h.swp  ASTPrinter.h  Codegen.h  Lexer.h  Parser.h  ParserError.h  Token.h  Utility.h  Visitor.h
include/Nodes/: Class.h  Function.h  Includes.h  Node.h  Program.h  Type.h
include/Nodes/Decls/: VarDecl.h
include/Nodes/Expr/: .IfExpr.h.swp  .LiteralExpr.h.swp  BinExpr.h  CallExpr.h  CompoundExpr.h  Expr.h  IdenExpr.h  IfExpr.h  LiteralExpr.h  ReturnExpr.h
include/Nodes/Stmt/: CompoundStmt.h  Stmt.h
src/: .Lexer.cpp.swp  .Parser.cpp.swp  Lexer.cpp  Parser.cpp  ParserError.cpp  ParserError.h
src/Codegen/: Expr.cpp  Function.cpp  Program.cpp
tests/: .lexer_test.cpp.swp  .parser_test.cpp.swp  lexer_test.cpp  parser_test.cpp
